# semver.rs.wasm

./: .gitignore  Cargo.toml  README.md  semver.wai
.cargo/: config.toml
src/: lib.rs  lib_component.rs  lib_wasmer.rs
wit/: world.wit
