[package]
name = "semver"
description = "TODO"
version = "0.1.0"
edition = "2021"
documentation = "https://github.com/jcbhmr/semver.wasm#readme"
homepage = "https://github.com/jcbhmr/semver.wasm#readme"
repository = "https://github.com/jcbhmr/semver.wasm.git"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# default = ["component"]
default = ["component", "wasmer"]
component = ["dep:cargo-component-bindings"]
wasmer = ["dep:wai-bindgen-rust"]

[dependencies]
semver-upstream = { package = "semver", version = "1.0.0" }
cargo-component-bindings = { version = "0.6.0", optional = true }
wai-bindgen-rust = { version = "0.2.3", optional = true }
cfg-if = "1.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

# cargo-run-bin, cargo-binstall
[package.metadata.bin]
cargo-component = { version = "0.6.0" }
cargo-wasmer = { version = "0.4.0" }

# cargo-component
[package.metadata.component]
package = "jcbhmr:semver"

# cargo-component
[package.metadata.component.dependencies]

# cargo-wasmer
[package.metadata.wasmer]
namespace = "jcbhmr"
abi = "wasi"
bindings = { wai-version = "0.2.3", exports = "semver.wai" }
